# kamayuc_perception

./: CMakeLists.txt  README.md  package.xml
config/: alvar.yaml
launch/: artag_track_2D.launch  artag_track_3D.launch  read_video.launch  visual_odom.launch
src/: open_copy.py  read_video.cpp  read_video.launch
