<?xml version="1.0"?>
<package format="2">
  <name>kamayuc_perception</name>
  <version>0.1.0</version>
  <description>The kamayuc mapping package for ERC-2021 contest</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="kamayuc@todo.todo">kamayuc</maintainer>


  <license>TODO</license>
  
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->

  <buildtool_depend>catkin</buildtool_depend>
  <depend>ar_track_alvar_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf2_ros</depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>ar_track_alvar</exec_depend>
  <build_depend>rtabmap_ros</build_depend>
</package>
